# inkfill

./: .cspell.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: filters.html  index.html  numerals.html  registry.html  xref.html
src/inkfill/: __init__.py  __main__.py  alpha.py  filters.py  numerals.py  numeric.py  registry.py  roman.py  xref.py
src/inkfill/examples/corporate-letter/: letter.html.j2  letter.toml
src/inkfill/views/: inkfill-base.html.j2  inkfill-util.html.j2  inkfill.html.j2
src/inkfill/views/static/: index.less  inkfill.js  inkfill.less
test/: test_alpha.py  test_filters.py  test_main.py  test_numerals.py  test_numeric.py  test_plural.py  test_roman.py  test_xref.py
